--- a/style.css
+++ b/style.css
@@ -1,8 +1,80 @@
-html {
-  font-size: 62.5%;
-}
-body {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: sans-serif;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.container {
+  margin: 2.4rem auto;
+  width: 80%;
+}
+
+.header-links {
+  display: flex;
+  gap: 2.4rem;
+  align-items: center;
+}
+
+.nav-links {
+  display: flex;
+  gap: 2.4rem;
+}
+
+ul {
+  list-style: none;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #000;
+  /* font-weight: 400; */
+}
+
+.nav-get-start {
+  background-color: rgb(255, 0, 85);
+  padding: 1.2rem 3.6rem;
+  border-radius: 50px;
+}
+
+.get-start:link,
+.get-start:visited {
+  color: #fff;
+}
+
+.grid {
+  display: grid;
+}
+
+.grid-2--cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+/* 
+--- 01 TYPOGRAPHY SYSTEM
+
+- Font sizes (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
+
+- Spacing system (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+
+ */
