--- a/style.css
+++ b/style.css
@@ -1,32 +1,41 @@
+/* Reset styles */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+/* Base styles */
 html {
   font-size: 62.5%;
 }
 
 body {
   font-size: 1.6rem;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  color: #0a0d2f;
 }
 
+/* Navigation styles */
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
+header {
+  margin: 0 auto;
+  max-width: 80%;
+  padding: 2.4rem 0;
+}
 .container {
-  margin: 2.4rem auto;
-  width: 80%;
+  margin: 0 auto;
+  max-width: 80%;
+  padding: 9.6rem 0;
 }
 
 .header-links {
   display: flex;
-  gap: 2.4rem;
+  gap: 4.8rem;
   align-items: center;
 }
 
@@ -35,20 +44,26 @@ nav {
   gap: 2.4rem;
 }
 
+.nav-link-icon {
+  height: 1.2rem;
+  width: 1.2rem;
+}
+
 ul {
   list-style: none;
 }
 
-a:link,
-a:visited {
+.nav-links a:link,
+.nav-links a:visited {
   text-decoration: none;
   font-size: 1.6rem;
-  color: #000;
-  /* font-weight: 400; */
+  color: #343a40;
+  font-weight: 500;
 }
 
+/* Get Started button styles */
 .nav-get-start {
-  background-color: rgb(255, 0, 85);
+  background-color: #ff3e66;
   padding: 1.2rem 3.6rem;
   border-radius: 50px;
 }
@@ -58,23 +73,218 @@ a:visited {
   color: #fff;
 }
 
+/* Hero section styles */
+.section-hero {
+  background-color: #eef1f6;
+  height: 100vh;
+}
+
 .grid {
   display: grid;
+  padding: 9.6rem 0;
 }
 
 .grid-2--cols {
   grid-template-columns: repeat(2, 1fr);
 }
 
-/* 
---- 01 TYPOGRAPHY SYSTEM
+.hero-left {
+  position: relative;
+}
 
-- Font sizes (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+.hero-heading {
+  font-size: 6.8rem;
+  font-weight: 400;
+  color: #0a0d2f;
+}
 
+.hero-heading span {
+  font-weight: 900;
+}
 
-- Spacing system (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+.hero-sub {
+  color: #0a0d2f;
+  padding: 2.4rem 0;
+}
 
+.hero-input {
+  position: relative;
+  z-index: 999;
+  display: flex;
+  gap: 2.4rem;
+  align-items: center;
+  max-width: 32rem;
+  background-color: #fff;
+  padding: 1.6rem;
+  border-radius: 99rem;
+  box-shadow: 0px 10px 20px 0px rgb(10 13 47 / 10%);
+}
 
- */
+.input-mail {
+  color: #868e96;
+}
+
+.mail-icon {
+  color: #adb5bd;
+}
+
+.input-icon:last-child {
+  margin-left: auto;
+  color: #ff3e66;
+  height: 2.4rem;
+}
+
+.hero-feedback {
+  display: flex;
+  align-items: center;
+  gap: 3.6rem;
+  padding: 1.6rem 0;
+  color: #0a0d2f;
+}
+
+.hero-feedback h2 {
+  font-size: 2.4rem;
+  font-weight: 900;
+}
+
+.hero-feedback p {
+  font-size: 1.2rem;
+}
+
+.feedback-imgs img {
+  height: 4.4rem;
+  border-radius: 50%;
+  margin-right: -1.5rem;
+  border: 3px solid #fff;
+}
+
+.hero-img {
+  width: 50%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+/* ******************************* */
+/* How it worsk Section */
+/* ******************************* */
+/* Typography System */
+
+.features-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 6.4rem;
+}
+
+.primary-header {
+  font-size: 4.4rem;
+  font-weight: 700;
+  letter-spacing: -2px;
+  margin-bottom: 2.4rem;
+}
+
+.sub-header {
+  color: #868e96;
+  font-size: 2rem;
+}
+
+.oval-button {
+  border: 0.2rem solid #eef1f6;
+  border-radius: 5rem;
+  padding: 2.4rem;
+  height: 1rem;
+  display: flex;
+  gap: 0.8rem;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.oval-button:link,
+.oval-button:visited {
+  text-decoration: none;
+  color: #0a0d2f;
+  font-weight: 500;
+  font-size: 1.8rem;
+}
+
+.features-row {
+  display: flex;
+  gap: 3.2rem;
+  margin-bottom: 3.2rem;
+}
+
+.feature-item {
+  padding: 3.2rem;
+  border: 0.2rem solid #eef1f6;
+  border-radius: 1rem;
+}
+
+.feature-icon-background {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  background-color: #343a40;
+  margin-bottom: 2.4rem;
+}
+
+.feature-1 {
+  background-color: #2facfc;
+}
+
+.feature-2 {
+  background-color: #ea4d89;
+}
+
+.feature-3 {
+  background-color: #3679ff;
+}
+
+.feature-4 {
+  background-color: #f67842;
+}
+
+.feature-5 {
+  background-color: #6b88f7;
+}
+
+.feature-6 {
+  background-color: #3bb094;
+}
+
+.feature-icon-background .feature-icon {
+  color: #fff;
+}
+
+.feature-icon {
+  color: #343a40;
+}
+
+.feature-header {
+  margin-bottom: 1.2rem;
+}
+.sub-header {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  margin-bottom: 1.6rem;
+}
+
+.feature-link:link,
+.feature-link:visited {
+  text-decoration: none;
+  color: #0a0d2f;
+  display: flex;
+  font-size: 1.4rem;
+  align-items: center;
+}
+
+/*
+  Font sizes (px):
+  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+  
+  Spacing system (px):
+  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+*/
