--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ ul {
 .get-start:link,
 .get-start:visited {
   color: #fff;
+  text-decoration: none;
 }
 
 /* Hero section styles */
@@ -113,7 +114,7 @@ ul {
   display: flex;
   gap: 2.4rem;
   align-items: center;
-  max-width: 32rem;
+  max-width: 40rem;
   background-color: #fff;
   padding: 1.6rem;
   border-radius: 99rem;
@@ -260,7 +261,7 @@ ul {
 }
 
 .feature-icon {
-  color: #343a40;
+  color: #868e96;
 }
 
 .feature-header {
@@ -275,8 +276,10 @@ ul {
 .feature-link:link,
 .feature-link:visited {
   text-decoration: none;
-  color: #0a0d2f;
+  color: #868e96;
+  font-weight: 500;
   display: flex;
+  gap: 0.4rem;
   font-size: 1.4rem;
   align-items: center;
 }
